--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -28,7 +28,7 @@
 
       {{ if .Params.Cover }}
         <figure class="post-cover">
-          <img src="{{ .Params.Cover | absURL }}" alt="{{ .Title }}" />
+          <img src="{{ .Params.Cover | absURL }}" alt="{{ .Title }}" class="u-photo" />
           
           {{ if .Params.CoverCaption }}
             <figcaption class="center">{{ .Params.CoverCaption | markdownify }}</figcaption>
