--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -11,7 +11,7 @@
 
         {{ if .IsTranslated }} | {{ i18n "postAvailable" }}
           {{ range .Translations }}
-              <a href="{{ .Permalink }}"><span class="flag fi fi-{{ index $.Site.Data.langFlags (.Lang) }}"></span></a>
+              <a href="{{ .Permalink }}" rel="alternate"><span class="flag fi fi-{{ index $.Site.Data.langFlags (.Lang) }}"></span></a>
           {{ end}}
         {{ end }}
       </p>
